--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="ZH-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="html/css/FFVII.css">
     <title>Final Fantasy VII by Roger</title>
+    
 
 </head>
 <!-- <body> -->
