--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,9 @@
 <html lang="ZH-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/FFVII.css">
     <title>Final Fantasy VII by Roger</title>
 
