--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <!-- <body> -->
 <body style="background-color: black;">
 <div id= "logo-D">
-<img id="logo-I" src="immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片"  height="40%" srcset="" style="position: absolute;top: 100px; ;left: 450px;">
+<img id="logo-I" src="immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片" >
 </div>    
     
  <div id="hover-div"  class="hover-area">
