--- a/html/services.html
+++ b/html/services.html
@@ -156,11 +156,11 @@
         <div class="player__header">
         <div class="player__img player__img--absolute slider" >
         <button class="player__button player__button--absolute--nw playlist">
-        <img src="https://physical-authority.surge.sh/imgs/icon/playlist.svg" alt="playlist-icon">
+        <img src="http://physical-authority.surge.sh/imgs/icon/playlist.svg" alt="playlist-icon">
         </button>
         <button class="player__button player__button--absolute--center play">
-        <img src="https://physical-authority.surge.sh/imgs/icon/play.svg" alt="play-icon">
-        <img src="https://physical-authority.surge.sh/imgs/icon/pause.svg" alt="pause-icon">
+        <img src="http://physical-authority.surge.sh/imgs/icon/play.svg" alt="play-icon">
+        <img src="http://physical-authority.surge.sh/imgs/icon/pause.svg" alt="pause-icon">
         </button>
         <div class="slider__content">
         <img class="img slider__img" src="img/final-fantasy-vii-remake---button-fin-1586205679705.webp" alt="cover">
@@ -250,14 +250,14 @@
         </div>
         <div class="player__controls">
         <button class="player__button back">
-        <img class="img" src="https://physical-authority.surge.sh/imgs/icon/back.svg" alt="back-icon">
+        <img class="img" src="http://physical-authority.surge.sh/imgs/icon/back.svg" alt="back-icon">
         </button>
         <p class="player__context slider__context">
         <strong class="slider__name"></strong>
         <span class="player__title slider__title"></span>
         </p>
         <button class="player__button next">
-        <img class="img" src="https://physical-authority.surge.sh/imgs/icon/next.svg" alt="next-icon">
+        <img class="img" src="http://physical-authority.surge.sh/imgs/icon/next.svg" alt="next-icon">
         </button>
         <div class="progres">
         <div class="progres__filled"></div>
