services.html update
update: .hero-content h2 .lline

--- a/html/services.html
+++ b/html/services.html
@@ -17,6 +17,14 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/305eb912a0.js" crossorigin="anonymous"></script>
+    <style>
+        .hero-content h2{
+          transform: translate(15%,0);
+        }
+        .line{
+          transform: translate(90%,0%);
+        }
+    </style>
 </head>
 
 <body>
@@ -140,7 +148,6 @@
                     <div class="col-12 col-md-8">
                         
                         <div class="line"></div>
-                        
                         <h2>FINAL FANTASY VII BGM欣賞 </h2>
                         <p></p>
                         <!-- <a href="#" class="btn sonar-btn white-btn">contact me</a> -->
