--- a/html/services.html
+++ b/html/services.html
@@ -24,6 +24,9 @@
         .line{
           transform: translate(90%,0%);
         }
+        body{
+            height: 100%;
+        }
     </style>
 </head>
 
