portdolio.html update
排版 update

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -17,7 +17,10 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/movie.css">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/305eb912a0.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/305eb912a0.js" crossorigin="anonymous"></script>
+    <style>
+        
+    </style>
 </head>
 
 <body>
@@ -116,7 +119,7 @@
                             <div class="header-social-area d-flex align-items-center">
                                 <a href="https://www.playstation.com/zh-hant-tw/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="PlayStation"><i class="fa-brands fa-playstation fa-shake" aria-hidden="true"></i></a>
                                 <a href="https://www.jp.square-enix.com/ffvii_rebirth/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="SQUARE ENIX"><i class="fa-sharp fa-solid fa-s  fa-bounce" aria-hidden="true"></i></a>
-                                <a href="https://store.steampowered.com/app/1462040/FINAL_FANTASY_VII_REMAKE_INTERGRADE/?curator_clanid=34459" target="_blank" data-toggle="tooltip" data-placement="bottom" title="STEAM"><i class="fa-brands fa-steam fa-spin-pulse" aria-hidden="true"></i></a>
+                                <a href="https://store.steampowered.com/app/1462040/FINAL_FANTASY_VII_REMAKE_INTERGRADE/?curator_clanid=34459" target="_blank" data-toggle="tooltip" data-placement="bottom" title="STEAM"><i class="fa-brands fa-steam fa-flip" aria-hidden="true"></i></a>
                                 <a href="https://www.instagram.com/hakkavongli/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="土鳳梨•貪食獸ฅ^•ω•^ฅ的Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 <a href="https://www.facebook.com/finalfantasyvii/?locale=zh_TW" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://twitter.com/finalfantasyvii    " target="_blank" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -210,6 +213,7 @@
                     <div class="gallery-content">
                         <h4>PS5『Final Fantasy VII Remake Intergrade』中文字幕版實機影片</h4>
                         <p>FINAL FANTASY VII REMAKE</p>
+                        <br>
                     </div>
                 </div>
 
@@ -241,6 +245,7 @@
                     <div class="gallery-content">
                         <h4>FFVII REMAKE 摘要影片：《FINAL FANTASY VII REBIRTH》</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
+                        <br>
                     </div>
                 </div>
 
