portfolio.html update
portfolio.html 排版 update

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -211,9 +211,8 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/QKrUkIucrII?si=AyGR4FeWy-kYpuxk')" ><img src="https://img.youtube.com/vi/QKrUkIucrII/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>PS5『Final Fantasy VII Remake Intergrade』中文字幕版實機影片</h4>
+                        <h4>PS5『Final Fantasy VII Remake Intergrade』<br> 中文字幕版實機影片</h4>
                         <p>FINAL FANTASY VII REMAKE</p>
-                        <br>
                     </div>
                 </div>
 
@@ -232,9 +231,8 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/Kznek1uNVsg?si=JlXF0k8jR1zbX1qW')" ><img src="https://img.youtube.com/vi/Kznek1uNVsg/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>Final Fantasy VII - E3 2015 Trailer | PS4</h4>
+                        <h4>Final Fantasy VII <br> E3 2015 Trailer | <br> PS4</h4>
                         <p>FINAL FANTASY VII REMAKE</p>
-                        <br>
                     </div>
                 </div>
 
@@ -245,18 +243,15 @@
                     <div class="gallery-content">
                         <h4>FFVII REMAKE 摘要影片：《FINAL FANTASY VII REBIRTH》</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
-                        <br>
                     </div>
                 </div>
-
                 <!-- Single gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REBIRTH studio wow fadeInUpBig" data-wow-delay="900ms">
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/wK41QQdTasY?si=LKJtyJuS2yLwRWNZ')" ><img src="https://img.youtube.com/vi/wK41QQdTasY/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>PS5『FINAL FANTASY VII REBIRTH』宣傳影片</h4>
+                        <h4>PS5『FINAL FANTASY VII REBIRTH』 <br> 宣傳影片</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
-                        <br>
                     </div>
                 </div>
 
@@ -265,9 +260,8 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/hR6jt6M-vZs?si=yrwFByDLMXhnmwgJ')" ><img src="https://img.youtube.com/vi/5ZXqcymx0CI/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>《FINAL FANTASY VII REBIRTH》公開發售日宣傳影片</h4>
+                        <h4>《FINAL FANTASY VII REBIRTH》<br> 公開發售日宣傳影片</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
-                        <br>
                     </div>
                 </div>
 
@@ -286,9 +280,8 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/WgdkN2tCAFw?si=xiYAMBmYnX5wOpui')" ><img src="https://img.youtube.com/vi/WgdkN2tCAFw/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>《Final Fantasy VII Rebirth》- State of Play | PS5遊戲</h4>
+                        <h4>《Final Fantasy VII Rebirth》- State of Play | <br> PS5遊戲</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
-                        <br>
                     </div>
                 </div>
 
@@ -317,7 +310,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/Mw78Kp_RgJk?si=QfUZQn3pDX_O3_Qe')" ><img src="https://img.youtube.com/vi/Mw78Kp_RgJk/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>PS5『FINAL FANTASY VII REBIRTH』最終宣傳影片</h4>
+                        <h4>PS5『FINAL FANTASY VII REBIRTH』 <br> 最終宣傳影片 </h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -327,7 +320,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/H8ZHe87wij8?si=uP0iTkT2kIysGEC_')" ><img src="https://img.youtube.com/vi/H8ZHe87wij8/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>Final Fantasy 7 Rebirth - Theme Song Performance | 完整版</h4>
+                        <h4>Final Fantasy 7 Rebirth - Theme Song Performance | <br> 完整版 <br></h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -337,16 +330,10 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/ORjC4kZ-hCo?si=e1sN4z7_SXgq8LDR')" ><img src="https://img.youtube.com/vi/ORjC4kZ-hCo/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>FINAL FANTASY XIV: DAWNTRAIL Full Trailer</h4>
+                        <h4>FINAL FANTASY XIV: DAWNTRAIL Full Trailer | <br> 黃金的遺產 <br></h4>
                         <p>FINAL FANTASY XIV</p>
                     </div>
                 </div>
-
-
-
-
-
-
             </div>
 
             <div class="row">
