index.html update
update: add html .ico

--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="html/css/FFVII.css">
     <title>Final Fantasy VII by Roger</title>
-    
-
+    <link rel="icon" href="html/img/core-img/FFVII OCO.png">
 </head>
 <!-- <body> -->
 <body style="background-color: black;">
 <div id= "logo-D">
 <img id="logo-I" src="html/immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片">
 </div>    
-    
  <div id="hover-div"  class="hover-area">
     <a href="html/index2.html" target="" class="link1 btn-74">START</a>
     <a href="html/index2.html" target="">
@@ -23,14 +21,10 @@
     </a>
 </div>
  <audio id="hover-sound" src="html/FFVII SOUND/final-fantasy-viii-sound-effects-cursor-move.mp3"></audio>
-
 <div id="mp3-player">
 <audio id="bkmp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"  
 src="html/Final Fantasy VII (MP3).zophar/102a Opening ~ Bombing Mission.mp3"></audio>
 </div>
-
-
 <script src="html/js/FFVII.js"></script>
-
 </body>
 </html>
