--- a/html/index.html
+++ b/html/index.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/FFVII.css">
     <title>Final Fantasy VII by Roger</title>
-
+    <link rel="icon" href="img/core-img/FFVII OCO.png">
 </head>
 <!-- <body> -->
-<body style="background-color: black;">
+<body>
 <div id= "logo-D">
 <img id="logo-I" src="immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片" >
-</div>    
-    
+</div>     
  <div id="hover-div"  class="hover-area">
     <a href="index2.html" target="" class="link1 btn-74">START</a>
     <a href="index2.html" target="">
@@ -22,14 +21,10 @@
     </a>
 </div>
  <audio id="hover-sound" src="FFVII SOUND/final-fantasy-viii-sound-effects-cursor-move.mp3"></audio>
-
 <div id="mp3-player">
 <audio id="bkmp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"  
 src="Final Fantasy VII (MP3).zophar/102a Opening ~ Bombing Mission.mp3"></audio>
 </div>
-
-
-<script src="js/FFVII.js"></script>
-
+<script src="js/FFVII.js"></script> 
 </body>
 </html>
