services.html update
update:  .hero-content h2  ,  .line

--- a/html/services.html
+++ b/html/services.html
@@ -19,10 +19,12 @@
     <script src="https://kit.fontawesome.com/305eb912a0.js" crossorigin="anonymous"></script>
     <style>
         .hero-content h2{
-          transform: translate(15%,0);
+            position:absolute;
+            transform: translate(90px,-50px);
         }
         .line{
-          transform: translate(90%,0%);
+            position:absolute;
+            transform: translate(90px,-50px);
         }
         body{
             height: 100%;
