--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <link rel="icon" href="html/img/core-img/FFVII OCO.png">
 </head>
 <!-- <body> -->
-<body style="background-color: black;">
+<body>
 <div id= "logo-D">
 <img id="logo-I" src="html/immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片">
 </div>    
  <div id="hover-div"  class="hover-area">
-    <a href="html/index2.html" target="" class="link1 btn-74">START</a>
-    <a href="html/index2.html" target="">
-    <img id="h-img" src="html/immage/figer.png" alt="himg">
+    <a href="html/index2.html" target="" class="link1 btn-74" onclick="playSound(event)">START</a>
+    <a href="html/index2.html" target="" onclick="playSound(event)">
+    <img id="h-img" src="html/immage/figer.png" alt="himg" >
     </a>
 </div>
  <audio id="hover-sound" src="html/FFVII SOUND/final-fantasy-viii-sound-effects-cursor-move.mp3"></audio>
+ <audio id="check-sound" src="html/FFVII SOUND/final-fantasy-vii-sound-effects-save-and-load.mp3"></audio>
+ 
 <div id="mp3-player">
 <audio id="bkmp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"  
 src="html/Final Fantasy VII (MP3).zophar/102a Opening ~ Bombing Mission.mp3"></audio>
