index.html FF VII.ls  update
update: html & js  playsound code

--- a/html/index.html
+++ b/html/index.html
@@ -15,12 +15,14 @@
 <img id="logo-I" src="immage/pngfind.com-final-fantasy-15-logo-1335730.png" alt="開頭圖片" >
 </div>     
  <div id="hover-div"  class="hover-area">
-    <a href="index2.html" target="" class="link1 btn-74">START</a>
-    <a href="index2.html" target="">
+    <a href="index2.html" target="" class="link1 btn-74" onclick="playSound(event)">START</a>
+    <a href="index2.html" target="" onclick="playSound(event)">
     <img id="h-img" src="immage/figer.png" alt="himg">
     </a>
 </div>
  <audio id="hover-sound" src="FFVII SOUND/final-fantasy-viii-sound-effects-cursor-move.mp3"></audio>
+ <audio id="check-sound" src="FFVII SOUND/final-fantasy-vii-sound-effects-save-and-load.mp3"></audio>
+ 
 <div id="mp3-player">
 <audio id="bkmp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"  
 src="Final Fantasy VII (MP3).zophar/102a Opening ~ Bombing Mission.mp3"></audio>
