--- a/html/index2.html
+++ b/html/index2.html
@@ -128,7 +128,7 @@
     <section class="hero-area">
         <div class="hero-slides owl-carousel">
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide1.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide13.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -142,10 +142,10 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide2.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide14.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
-                        <div class="col-12">
+                        <div class="col-12">    
                             <div class="hero-slides-content">
                                 <div class="line"></div>
                                 <h2>Kuraudo Sutoraifu</h2>
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide3.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/F7VMQvEaEAAblWN.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide4.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide12.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide5.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/F9blf9SbIAACgqa.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide6.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/GCU3JkKbkAE9YeP.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/zack.png);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/final-fantasy-vii-rebirth-2-2-553x1024.webp);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/silde10.png);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/GCU3HpTawAAnRcO.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -240,56 +240,57 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide11.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/cid_full.png), url(img/bg-img/F_W7cbdbsAAUIgR.jpg); background-size: contain, cover; bottom: -5  0px;">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
                             <div class="hero-slides-content">
                                 <div class="line"></div>
-                                <h2>預留</h2>
-                                <p></p>
+                                <h2>Cid Highwind</h2>
+                                <p>飛空艇「海溫德（Highwind）」的船長。不斷地在抽菸、說髒話、鬧脾氣[6]，但其實心地善良，相信科學至上主義。隨身武器為長槍。
+                                    過去是神羅的傳奇飛行員與頭號太空人，飛空艇「海溫德」就是以他為名。但在神羅資助下完成火箭、即將要完成上太空的夢想時，因為了救助手謝拉而按下緊急停止按鈕，後來神羅也停止了火箭計劃。現在依然向著遙遠的天空而奮鬥。</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide12.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/cat_full.png), url(img/bg-img/GD4lNSgaEAAqMLS.jpg); background-size: contain,cover;">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
                             <div class="hero-slides-content">
                                 <div class="line"></div>
-                                <h2>預留</h2>
-                                <p></p>
+                                <h2>Cait Sith</h2>
+                                <p>貓型毛絨算命機器人。因其騎著莫古利的可愛外表和詼諧的談吐而作為金碟的吉祥物而受歡迎。出於某種原因，他對克勞德等人產生了興趣，並陪伴他們踏上了旅程。它擁有自己的網絡並提供有關 Shinra 公司的資訊。</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide13.jpg);">
+            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/V_full.png), url(img/bg-img/bbgb.webp); background-size: contain, cover;">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
                             <div class="hero-slides-content">
                                 <div class="line"></div>
-                                <h2>預留</h2>
-                                <p></p>
+                                <h2>Vincent Valentine</h2>
+                                <p>居住在神羅宅邸的自稱保安人員。為了贖罪，他在地下洞穴的棺材裡睡了很多年。在它的深紅色斗篷下，隱藏著兇猛妖獸的本質。看來他與薩菲羅斯有聯繫，但細節卻籠罩在神秘之中。</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide14.jpg);">
-                <div class="container h-100">
-                    <div class="row h-100 align-items-end">
-                        <div class="col-12">
-                            <div class="hero-slides-content">
-                                <div class="line"></div>
-                                <h2>預留</h2>
-                                <p></p>
+            <!-- <div class="single-hero-slide bg-img slide-background-overlay" style="background-image: url(img/bg-img/slide14.jpg);"> -->
+                <!-- <div class="container h-100"> -->
+                    <!-- <div class="row h-100 align-items-end"> -->
+                        <!-- <div class="col-12"> -->
+                            <!-- <div class="hero-slides-content"> -->
+                                <!-- <div class="line"></div> -->
+                                <!-- <h2>預留</h2> -->
+                                <!-- <p></p> -->
                             </div>
                         </div>
                     </div>
