--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -138,7 +138,7 @@
     <div class="hero-area d-flex align-items-center">
         <!-- Hero Thumbnail -->
         <div class="hero-thumbnail equalize bg-img" style="background-image: url();">
-            <video src="img/PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版最終預告片.mp4" autoplay muted loop></video>
+            <video id= "Remakevideo"src="img/PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版最終預告片.mp4" autoplay muted loop></video>
         </div>
         
         <!-- Hero Content -->
