--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -136,9 +136,9 @@
 
     <!-- ***** Hero Area Start ***** -->
     <div class="hero-area d-flex align-items-center">
-        <!-- Hero Thumbnail -->
-        <div class="hero-thumbnail equalize bg-img" style="background-image: url();">
-            <video id= "Remakevideo"src="img/PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版最終預告片.mp4" autoplay muted loop></video>
+        <!-- Hero Thumbnail hero-thumbnail-->
+        <div class="equalize bg-img" style="background-image: url();">
+            <video id="Remakevideo" src="img/PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版最終預告片.mp4" autoplay muted loop></video>
         </div>
         
         <!-- Hero Content -->
