--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -185,7 +185,6 @@
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
-                <br>
 
                 <!-- Single gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REMAKE fashion wow fadeInUpBig" data-wow-delay="500ms">
@@ -197,7 +196,7 @@
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
-                <br>
+
 
                 <!-- Single gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REMAKE studio wow fadeInUpBig" data-wow-delay="700ms">
@@ -210,14 +209,15 @@
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
-                <br>
+
 
                 <!-- Single gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REMAKE studio wow fadeInUpBig" data-wow-delay="900ms">
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/QKrUkIucrII?si=AyGR4FeWy-kYpuxk')" ><img src="https://img.youtube.com/vi/QKrUkIucrII/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>PS5『Final Fantasy VII Remake Intergrade』<br> 中文字幕版實機影片</h4>
+                        <h4>PS5『Final Fantasy VII Remake Intergrade』中文字幕版實機影片</h4>
+                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -228,6 +228,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《FINAL FANTASY VII REMAKE INTERGRADE》 Final Trailer（繁體中文版）</h4>
+                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -238,6 +239,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>Final Fantasy VII <br> E3 2015 Trailer | <br> PS4</h4>
+                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -269,8 +271,8 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《FINAL FANTASY VII REBIRTH》<br> 公開發售日宣傳影片</h4>
-                        <p>FINAL FANTASY VII REBIRTH</p>
                         <br>
+                        <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
                 
@@ -281,10 +283,11 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>【繁體中文字幕】《FINAL FANTASY VII REBIRTH》 – DESTINED FOR REBIRTH</h4>
+                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
-                <br>
+
 
                 <!-- Single gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REBIRTH wow fadeInUpBig" data-wow-delay="700ms">
@@ -292,8 +295,8 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《Final Fantasy VII Rebirth》- State of Play | <br> PS5遊戲</h4>
-                        <p>FINAL FANTASY VII REBIRTH</p>
                         <br>
+                        <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
 
@@ -303,6 +306,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5《FINAL FANTASY VII REBIRTH》最新中文預告及主題曲「No Promises to Keep」</h4>
+                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -313,6 +317,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《FINAL FANTASY VII REBIRTH》「PS5 獨特沉浸體驗」中文預告 </h4>
+                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -323,6 +328,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5『FINAL FANTASY VII REBIRTH』 <br> 最終宣傳影片 </h4>
+                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -333,6 +339,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>Final Fantasy 7 Rebirth - Theme Song Performance | <br> 完整版 <br></h4>
+                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -343,6 +350,7 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>FINAL FANTASY XIV: DAWNTRAIL Full Trailer | <br> 黃金的遺產 <br></h4>
+                        <br>
                         <p>FINAL FANTASY XIV</p>
                     </div>
                 </div>
