update: portfolio.html
update: add new video

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -18,9 +18,7 @@
     <link rel="stylesheet" href="css/movie.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/305eb912a0.js" crossorigin="anonymous"></script>
-    <style>
-        
-    </style>
+
 </head>
 
 <body>
@@ -181,7 +179,6 @@
                     <!-- Gallery Content -->    
                     <div class="gallery-content">
                         <h4>PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版最終預告片</h4>
-                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -192,7 +189,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS4『FINAL FANTASY VII REMAKE』日語發音中文字幕版開場動畫</h4>
-                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -205,7 +201,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS4『FINAL FANTASY VII REMAKE』日文語音中文字幕版實機遊玩影片</h4>
-                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -217,7 +212,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5『Final Fantasy VII Remake Intergrade』中文字幕版實機影片</h4>
-                        <br>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -227,9 +221,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/Vk1LAaPwKOg?si=GvMrcVLX5FUaPcVV')" ><img src="https://img.youtube.com/vi/Vk1LAaPwKOg/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>《FINAL FANTASY VII REMAKE INTERGRADE》 Final Trailer（繁體中文版）</h4>
-                        <br>
-                        <br>
+                        <h4>《FINAL FANTASY VII REMAKE INTERGRADE》Final Trailer（繁體中文版）</h4>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -239,9 +231,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/Kznek1uNVsg?si=JlXF0k8jR1zbX1qW')" ><img src="https://img.youtube.com/vi/Kznek1uNVsg/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>Final Fantasy VII <br> E3 2015 Trailer | <br> PS4</h4>
-                        <br>
-                        <br>
+                        <h4>Final Fantasy VII <br> E3 2015 Trailer | PS4</h4>
                         <p>FINAL FANTASY VII REMAKE</p>
                     </div>
                 </div>
@@ -251,9 +241,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/kKYZPALsjJo?si=Bs6p405oA46SWikM')" ><img src="https://img.youtube.com/vi/kKYZPALsjJo/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>FFVII REMAKE 摘要影片：《FINAL FANTASY VII REBIRTH》</h4>
-                        <br>
-                        <br>
+                        <h4>FFVII REMAKE 摘要影片： <br>《FINAL FANTASY VII REBIRTH》</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -263,8 +251,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5『FINAL FANTASY VII REBIRTH』 <br> 宣傳影片</h4>
-                        <br>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -275,7 +261,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《FINAL FANTASY VII REBIRTH》<br> 公開發售日宣傳影片</h4>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -286,8 +271,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/3S7NpT8B-gE?si=GpIdsext1hxq1HbC')" ><img src="https://img.youtube.com/vi/3S7NpT8B-gE/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>【繁體中文字幕】《FINAL FANTASY VII REBIRTH》 – DESTINED FOR REBIRTH</h4>
-                        <br>
+                        <h4>【繁體中文字幕】《FINAL FANTASY VII REBIRTH》DESTINED FOR REBIRTH</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -298,8 +282,7 @@
                     <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/WgdkN2tCAFw?si=xiYAMBmYnX5wOpui')" ><img src="https://img.youtube.com/vi/WgdkN2tCAFw/sddefault.jpg" alt=""></a>
                     <!-- Gallery Content -->
                     <div class="gallery-content">
-                        <h4>《Final Fantasy VII Rebirth》- State of Play | <br> PS5遊戲</h4>
-                        <br>
+                        <h4>《Final Fantasy VII Rebirth》<br> State of Play | PS5遊戲</h4>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -310,7 +293,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5《FINAL FANTASY VII REBIRTH》最新中文預告及主題曲「No Promises to Keep」</h4>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -321,7 +303,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>《FINAL FANTASY VII REBIRTH》「PS5 獨特沉浸體驗」中文預告 </h4>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -332,7 +313,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>PS5『FINAL FANTASY VII REBIRTH』 <br> 最終宣傳影片 </h4>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -343,7 +323,6 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>Final Fantasy 7 Rebirth - Theme Song Performance | <br> 完整版 <br></h4>
-                        <br>
                         <p>FINAL FANTASY VII REBIRTH</p>
                     </div>
                 </div>
@@ -354,10 +333,26 @@
                     <!-- Gallery Content -->
                     <div class="gallery-content">
                         <h4>FINAL FANTASY XIV: DAWNTRAIL Full Trailer | <br> 黃金的遺產 <br></h4>
-                        <br>
                         <p>FINAL FANTASY XIV</p>
                     </div>
                 </div>
+
+                <!-- Single gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item REBIRTH wow fadeInUpBig" data-wow-delay="900ms">
+                    <a id="play-button" class="pic" onclick="showVideo('https://www.youtube.com/embed/hQGuqEDN-4c?si=qyLccleinottTBWN')" ><img src="https://img.youtube.com/vi/hQGuqEDN-4c/sddefault.jpg" alt=""></a>
+                    <!-- Gallery Content -->
+                    <div class="gallery-content">
+                        <h4>《FINAL FANTASY VII REBIRTH》短版影片　戰鬥&原野篇</h4>
+                        <p>FINAL FANTASY VII REBIRTH</p>
+                    </div>
+                </div>
+
+
+
+
+
+
+
             </div>
 
             <div class="row">
